changes for clients and bills

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script>
       $("#signin").submit(function(event){
         if($("#inputEmail").val() === "admin@test.com" && $("#inputPassword").val() === "temp"){
-          window.location.replace("/index.html?client=admin");
+          window.location.replace("/landing.html?client=admin");
           event.preventDefault();
         }
       });
