--- a/public/clientes.html
+++ b/public/clientes.html
@@ -44,13 +44,17 @@
         .page-wrapper{
             min-height: 600px;
         }
+        /*.client-box{
+            border: 1px solid #333;
+            padding-bottom: 10px;
+            border-radius: 5px;
+        }*/
     </style>
 </head>
 
 <body>
 
     <div id="wrapper">
-
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -75,9 +79,9 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Juan</strong>
                                         </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Ayer a las 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
@@ -90,31 +94,16 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Andres</strong>
                                         </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="message-preview">
-                            <a href="#">
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Ayer a las 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
                             </a>
                         </li>
                         <li class="message-footer">
-                            <a href="#">Read All New Messages</a>
+                            <a href="#">Leer todos los mensajes nuevos</a>
                         </li>
                     </ul>
                 </li>
@@ -122,44 +111,32 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
                     <ul class="dropdown-menu alert-dropdown">
                         <li>
-                            <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
+                            <a href="#">Alerta 1 <span class="label label-warning">Alerta</span></a>
                         </li>
                         <li>
-                            <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
+                            <a href="#">Alerta 2 <span class="label label-danger">Alerta</span></a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">View All</a>
+                            <a href="#">Ver todas</a>
                         </li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Juan <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Perfil</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Mensajes</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#"><i class="fa fa-fw fa-gear"></i> Opciones</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/"><i class="fa fa-fw fa-power-off"></i> Salir</a>
                         </li>
                     </ul>
                 </li>
@@ -171,16 +148,16 @@
                         <a data-toggle="collapse" data-target="#energia"><i class="fa fa-fw fa-dashboard"></i> Gestión Energética <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="energia" class="collapse">
                             <li>
-                                <a data-toggle="collapse" data-target="#diagnostico">Diagnóstico</a>
+                                <a data-toggle="collapse" data-target="#diagnostico"><i class="fa fa-line-chart" aria-hidden="true"></i> Diagnóstico</a>
                                 <ul id="diagnostico" class="collapse nested-list">
-                                    <li><a href="">Clientes</a></li>
-                                    <li><a href="">Facturas</a></li>
-                                    <li><a href="">Equipos</a></li>
-                                    <li><a href="">Resultados</a></li>
+                                    <li><a href="/clientes.html">Clientes</a></li>
+                                    <li><a href="/facturas.html">Facturas</a></li>
+                                    <li><a href="/equipos.html">Equipos</a></li>
+                                    <li><a href="/resultados.html">Resultados</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a data-toggle="collapse" data-target="#monitoreo">Monitoreo</a>
+                                <a data-toggle="collapse" data-target="#monitoreo"><i class="fa fa-bar-chart" aria-hidden="true"></i> Monitoreo</a>
                                 <ul id="monitoreo" class="collapse nested-list">
                                     <li><a href="">Auditoría</a></li>
                                 </ul>
@@ -203,19 +180,62 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <h4>ICafe</h4>
-                    <div class="col-sm-2">Unidad</div>
-                    <div class="col-sm-6">lbs de Cafe</div>
+                <div class="col-sm-4 client-box">
+                    <h2>ICafe</h2>
+                    <div class="col-sm-6">
+                        <label>Dirección:</label>
+                        <input class="form-control" type="text" readonly="" value="Cartago">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Actividad:</label>
+                        <input class="form-control" type="text" readonly="" value="Cafe">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Fuente de energía:</label>
+                        <input class="form-control" type="text" readonly="" value="Electricidad">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Unidad de producción:</label>
+                        <input class="form-control" type="text" readonly="" value="Fanegas de cafe">
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <h4>Más Que Pollo</h4>
+                <div class="col-sm-4 client-box">
+                    <h2>Más Que Pollo</h2>
+                    <div class="col-sm-6">
+                        <label>Dirección:</label>
+                        <input class="form-control" type="text" readonly="" value="Cartago">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Actividad:</label>
+                        <input class="form-control" type="text" readonly="" value="Restaurante">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Fuente de energía:</label>
+                        <input class="form-control" type="text" readonly="" value="Electricidad">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Unidad de producción:</label>
+                        <input class="form-control" type="text" readonly="" value="Comida">
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <h4>Dos Pinos</h4>
-                </div>
-                <div class="col-sm-4">
-                    <h4>Test</h4>
+                <div class="col-sm-4 client-box">
+                    <h2>Dos Pinos</h2>
+                    <div class="col-sm-6">
+                        <label>Dirección:</label>
+                        <input class="form-control" type="text" readonly="" value="Cartago">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Actividad:</label>
+                        <input class="form-control" type="text" readonly="" value="Leche">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Fuente de energía:</label>
+                        <input class="form-control" type="text" readonly="" value="Electricidad">
+                    </div>
+                    <div class="col-sm-6">
+                        <label>Unidad de producción:</label>
+                        <input class="form-control" type="text" readonly="" value="Comida">
+                    </div>
                 </div>
             </div>
         </div>
