--- a/public/landing.html
+++ b/public/landing.html
@@ -34,6 +34,9 @@
             padding-left: 60px;
             list-style: none;
         }
+        .nested-list li{
+            padding:10px;
+        }
         .nested-list a{
             color: #9d9d9d;
         }
@@ -61,7 +64,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Galilee</a>
+                <a class="navbar-brand" href="/landing.html">Galilee</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -75,9 +78,9 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Juan</strong>
                                         </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Ayer a las 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
@@ -90,31 +93,16 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
+                                        <h5 class="media-heading"><strong>Carlos</strong>
                                         </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="message-preview">
-                            <a href="#">
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Ayer a las 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
                             </a>
                         </li>
                         <li class="message-footer">
-                            <a href="#">Read All New Messages</a>
+                            <a href="#">Leer todos los mensajes nuevos</a>
                         </li>
                     </ul>
                 </li>
@@ -122,44 +110,32 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
                     <ul class="dropdown-menu alert-dropdown">
                         <li>
-                            <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
+                            <a href="#">Alerta 1 <span class="label label-warning">Alerta</span></a>
                         </li>
                         <li>
-                            <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
+                            <a href="#">Alerta 2 <span class="label label-danger">Alerta</span></a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">View All</a>
+                            <a href="#">Ver todas</a>
                         </li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Juan <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Perfil</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Mensajes</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#"><i class="fa fa-fw fa-gear"></i> Opciones</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/"><i class="fa fa-fw fa-power-off"></i> Salir</a>
                         </li>
                     </ul>
                 </li>
@@ -168,19 +144,19 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a data-toggle="collapse" data-target="#energia"><i class="fa fa-fw fa-dashboard"></i> Gestion Energética <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="energia">
-                            <li class="active">
-                                <a data-toggle="collapse" data-target="#diagnostico">Diagnóstico</a>
-                                <ul id="diagnostico" class="nested-list">
-                                    <li class="active"><a href="">Clientes</a></li>
-                                    <li><a href="">Facturas</a></li>
-                                    <li><a href="">Equipos</a></li>
-                                    <li><a href="">Resultados</a></li>
+                        <a data-toggle="collapse" data-target="#energia"><i class="fa fa-fw fa-dashboard"></i> Gestión Energética <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="energia" class="collapse">
+                            <li>
+                                <a data-toggle="collapse" data-target="#diagnostico"><i class="fa fa-line-chart" aria-hidden="true"></i> Diagnóstico</a>
+                                <ul id="diagnostico" class="collapse nested-list">
+                                    <li><a href="/clientes.html"><i class="fa fa-users" aria-hidden="true"></i> Clientes</a></li>
+                                    <li><a href="/facturas.html"><i class="fa fa-file-text" aria-hidden="true"></i> Facturas</a></li>
+                                    <li><a href="/equipos.html"><i class="fa fa-cogs" aria-hidden="true"></i> Equipos</a></li>
+                                    <li><a href="/resultados.html"><i class="fa fa-flag-checkered" aria-hidden="true"></i> Resultados</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a data-toggle="collapse" data-target="#monitoreo">Monitoreo</a>
+                                <a data-toggle="collapse" data-target="#monitoreo"><i class="fa fa-bar-chart" aria-hidden="true"></i> Monitoreo</a>
                                 <ul id="monitoreo" class="collapse nested-list">
                                     <li><a href="">Auditoría</a></li>
                                 </ul>
