--- a/public/clientes.html
+++ b/public/clientes.html
@@ -34,6 +34,9 @@
             padding-left: 60px;
             list-style: none;
         }
+        .nested-list li{
+            padding:10px;
+        }
         .nested-list a{
             color: #9d9d9d;
         }
@@ -65,7 +68,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Galilee</a>
+                <a class="navbar-brand" href="landing.html">Galilee</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -150,10 +153,10 @@
                             <li>
                                 <a data-toggle="collapse" data-target="#diagnostico"><i class="fa fa-line-chart" aria-hidden="true"></i> Diagnóstico</a>
                                 <ul id="diagnostico" class="collapse nested-list">
-                                    <li><a href="/clientes.html">Clientes</a></li>
-                                    <li><a href="/facturas.html">Facturas</a></li>
-                                    <li><a href="/equipos.html">Equipos</a></li>
-                                    <li><a href="/resultados.html">Resultados</a></li>
+                                    <li><a href="/clientes.html"><i class="fa fa-users" aria-hidden="true"></i> Clientes</a></li>
+                                    <li><a href="/facturas.html"><i class="fa fa-file-text" aria-hidden="true"></i> Facturas</a></li>
+                                    <li><a href="/equipos.html"><i class="fa fa-cogs" aria-hidden="true"></i> Equipos</a></li>
+                                    <li><a href="/resultados.html"><i class="fa fa-flag-checkered" aria-hidden="true"></i> Resultados</a></li>
                                 </ul>
                             </li>
                             <li>
