--- a/public/index2.html
+++ b/public/index2.html
@@ -9,8 +9,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -34,12 +32,18 @@
             padding-left: 60px;
             list-style: none;
         }
+        .nested-list li{
+            padding:10px;
+        }
         .nested-list a{
             color: #9d9d9d;
         }
         .nested-list li a:hover{
             color: #fff;
             background-color: transparent;
+        }
+        .page-wrapper{
+            min-height: 600px;
         }
     </style>
 </head>
@@ -58,7 +62,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Galilee</a>
+                <a class="navbar-brand" href="/landing.html">Galilee</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -87,7 +91,7 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>Andres</strong>
+                                        <h5 class="media-heading"><strong>Carlos</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Ayer a las 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -141,16 +145,16 @@
                         <a data-toggle="collapse" data-target="#energia"><i class="fa fa-fw fa-dashboard"></i> Gestión Energética <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="energia" class="collapse">
                             <li>
-                                <a data-toggle="collapse" data-target="#diagnostico">Diagnóstico</a>
+                                <a data-toggle="collapse" data-target="#diagnostico"><i class="fa fa-line-chart" aria-hidden="true"></i> Diagnóstico</a>
                                 <ul id="diagnostico" class="collapse nested-list">
-                                    <li><a href="/clientes.html">Clientes</a></li>
-                                    <li><a href="/facturas.html">Facturas</a></li>
-                                    <li><a href="/equipos.html">Equipos</a></li>
-                                    <li><a href="/resultados.html">Resultados</a></li>
+                                    <li><a href="/clientes.html"><i class="fa fa-users" aria-hidden="true"></i> Clientes</a></li>
+                                    <li><a href="/facturas.html"><i class="fa fa-file-text" aria-hidden="true"></i> Facturas</a></li>
+                                    <li><a href="/equipos.html"><i class="fa fa-cogs" aria-hidden="true"></i> Equipos</a></li>
+                                    <li><a href="/resultados.html"><i class="fa fa-flag-checkered" aria-hidden="true"></i> Resultados</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a data-toggle="collapse" data-target="#monitoreo">Monitoreo</a>
+                                <a data-toggle="collapse" data-target="#monitoreo"><i class="fa fa-bar-chart" aria-hidden="true"></i> Monitoreo</a>
                                 <ul id="monitoreo" class="collapse nested-list">
                                     <li><a href="">Auditoría</a></li>
                                 </ul>
@@ -167,30 +171,7 @@
         <div id="page-wrapper">
 
             <div class="container-fluid">
-
-                <!-- Page Heading -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">
-                            Dashboard <small>Statistics Overview</small>
-                        </h1>
-                        <ol class="breadcrumb">
-                            <li class="active">
-                                <i class="fa fa-dashboard"></i> Dashboard
-                            </li>
-                        </ol>
-                    </div>
-                </div>
                 <!-- /.row -->
-
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="alert alert-info alert-dismissable">
-                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                            <i class="fa fa-info-circle"></i>  <strong>Like SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
-                        </div>
-                    </div>
-                </div>
                 <!-- /.row -->
 
                 <div class="row">
