--- a/public/detalle.html
+++ b/public/detalle.html
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Galilee</a>
+                <a class="navbar-brand" href="landing.html">Galilee</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
