--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,18 @@
-<html lang="en"><head>
-    <meta charset="utf-8">
-    <title>Signin </title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-
-  <body>
-    <div class="container col-sm-2 col-sm-offset-5">
-      <form id="signin" class="form-signin">
-        <h2 class="form-signin-heading">Iniciar sesión</h2>
-        <label for="inputEmail" class="sr-only">Usuario</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Usuario" required="" autofocus="">
-        <label for="inputPassword" class="sr-only">Contraseña</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required="">
-        <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar</button>
-      </form>
-    </div>
-    <script src="/js/jquery.js"></script>
-    <script>
-      $("#signin").submit(function(event){
-        if($("#inputEmail").val() === "admin@test.com" && $("#inputPassword").val() === "temp"){
-          window.location.replace("/landing.html?client=admin");
-          event.preventDefault();
-        }
-      });
-    </script>
-  </body>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Galilee Softec</title>
+    <link rel="stylesheet" href="/css/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/resources/css/custom.css">
+</head>
+<body>
+<div class="container">
+	<div id="root"></div>
+</div>
+<script src="/css/jquery/dist/jquery.min.js"></script>
+<script src="/dist/bundle.js"></script>
+<script src="/css/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
