--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Galilee Softec</title>
     <link rel="stylesheet" href="/css/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/react-bootstrap-modal/lib/styles/rbm-patch.css">
     <link rel="stylesheet" href="/resources/css/custom.css">
 </head>
 <body>
