--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/react-bootstrap-modal/lib/styles/rbm-patch.css">
+    <link rel="stylesheet" href="/css/react-bootstrap-switch/dist/css/bootstrap3/react-bootstrap-switch.min.css">
     <link rel="stylesheet" href="/resources/css/custom.css">
 </head>
 <body>
