--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/react-bootstrap-modal/lib/styles/rbm-patch.css">
     <link rel="stylesheet" href="/css/react-bootstrap-switch/dist/css/bootstrap3/react-bootstrap-switch.min.css">
+    <link rel="stylesheet" href="/css/react-table/react-table.css">
+    <link rel="stylesheet" href="/css/react-datetime/css/react-datetime.css">
     <link rel="stylesheet" href="/resources/css/custom.css">
 </head>
 <body>
 <div class="container">
 	<div id="root"></div>
+	<div id="react-test">
+            </div>
 </div>
 <script src="/css/jquery/dist/jquery.min.js"></script>
 <script src="/dist/bundle.js"></script>
