--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,6 @@
 <script src="/css/jquery/dist/jquery.min.js"></script>
 <script src="/dist/bundle.js"></script>
 <script src="/css/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyClEPyWLb8qQ55VmWU-bQ3ln3IVlUYZWjI"></script>
 </body>
 </html>
